--- a/css/style.css
+++ b/css/style.css
@@ -1,145 +1,194 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap');
-
+/* Import Google Font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 body{
-    font-family: 'Poppins', sans-serif;
-    background-color: #D92525;
-    height: 100vh;
-}
-html{
-    font-size: 10px;
+    background: #88ABFF;
 }
 .container{
-    background-color: #D92525;
-    height: 100vh;
-    padding: 3rem 4rem;
+    margin: 50px;
+    display: grid;
+    gap: 15px;
+    grid-template-columns: repeat(auto-fill, 265px);
 }
-.nav-bar{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.nav-bar .logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 4rem;
-    font-weight: bold;
-    color: #fff;
-    letter-spacing: 0.1rem;
-}
-.nav-bar .menu{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-.nav-bar ul{
+.container li{
+    height: 250px;
     list-style: none;
+    background: #fff;
+    border-radius: 5px;
+    padding: 15px 20px 20px
 }
-.nav-bar ul li a{
-    display: block;
-    padding: 2rem 3rem;
-    text-decoration: none;
-    font-size: 2.5rem;
-    color: #fff;
-    font-weight: 500;
+.add-box, .icon, .bottom-content, .settings .menu li, .popup, header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-.nav-bar .bottom{
-    height: 2px;
-    width: 0;
-    background-color: #fff;
-    transition: width 0.3s ease;
-}
-.nav-bar .menu:hover .bottom{
-    width: 100%;
-}
-.main{
-    max-width: 450px;
-    margin: 3rem auto;
-    padding: 2rem 3rem;
-    border-radius: 0.7rem;
-    background-color: #fff;
-}
-.header h1{
-    font-size: 2rem;
-    font-weight: 400;
-}
-.header p{
-    font-size: 1.5rem;
-    color: #474747;
-    margin-top: 0.7rem;
-}
-.form input{
-    width: 100%;
-    padding: 2rem 2.5rem;
-    margin-top: 1rem;
-    font-size: 1.8rem;
-    outline: none;
-    border: 0.1rem solid #999;
-    border-radius: 0.7rem;
-}
-.form button{
-    width: 100%;
-    padding: 2rem 2rem;
-    margin-top: 2rem;
-    outline: none;
-    border: none;
-    border-radius: 0.7rem;
-    font-size: 1.8rem;
-    background-color: #D92525;
-    color: #fff;
-    letter-spacing: 0.1rem;
+.add-box{
+    flex-direction: column;
+    justify-content: center;
     cursor: pointer;
 }
-.main .qr-code{
-    width: 100%;
-    display: flex;
+.add-box .icon{
+    height: 78px;
+    width: 78px;
+    color: #88ABFF;
+    font-size: 40px;
+    border-radius: 50%;
     justify-content: center;
-    align-items: center;
-    padding: 5rem 0rem 3rem;
+    border: 2px dashed #88ABFF;
 }
-
-@media screen and (max-width: 768px) {
-    .nav-bar{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .nav-bar .logo{
-        font-size: 2rem;
-    }
-    .nav-bar ul li a{
-        display: block;
-        padding: 1.5rem 1.5rem;
-        text-decoration: none;
-        font-size: 1.7rem;
-        color: #fff;
-        font-weight: 500;
-    }
-    .main{
-        padding: 1.5rem 2rem;
-    }
-    .header h1{
-        font-size: 1.5rem;
-    }
-    .header p{
-        font-size: 1.3rem;
-        margin-top: 0.7rem;
-    }
-    .form input{
-        width: 100%;
-        padding: 1.5rem 2rem;
-        margin-top: 1rem;
-        font-size: 1.7rem;
-        outline: none;
-    }
-    .form button{
-        padding: 1.5rem 2rem;
-        margin-top: 2rem;
-        font-size: 1.6rem;
-    }
+.add-box p{
+    color: #88ABFF;
+    font-weight: 500;
+    margin-top: 20px;
+}
+.container .note{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.note .details{
+    max-height: 165px;
+    overflow-y: auto;
+}
+.note p{
+    font-size: 22px;
+    font-weight: 500;
+}
+.note span{
+    display: block;
+    margin-top: 5px;
+    color: #575757;
+    font-size: 16px;
+}
+.note .bottom-content{
+    padding-top: 10px;
+    border-top: 1px solid #ccc;
+}
+.bottom-content span{
+    color: #6d6d6d;
+    font-size: 14px;
+}
+.bottom-content .settings i{
+    color: #6d6d6d;
+    font-size: 14px;
+    cursor: pointer;
+}
+.settings{
+    position: relative;
+}
+.settings .menu{
+    position: absolute;
+    bottom: 0;
+    right: -5px;
+    padding: 5px 0;
+    background: #fff;
+    border-radius: 4px;
+    transform: scale(0);
+    transform-origin: bottom right;
+    box-shadow: 0 0 6px rgba(0,0,0,0.15);
+    transition: transform 0.2s ease;
+}
+.settings.show .menu{
+    transform: scale(1);
+}
+.settings .menu li{
+    height: 25px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 0;
+    padding: 17px 15px;
+    justify-content: flex-start;
+}
+.menu li:hover{
+    background: #f5f5f5;
+}
+.menu li i{
+    padding-right: 8px;
+}
+.popup-box{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    background: rgba(0,0,0,0.4);
+}
+.popup-box .popup{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+    max-width: 400px;
+    width: 100%;
+    justify-content: center;
+    transform: translate(-50%, -50%);
+}
+.popup-box, .popup-box .popup{
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.25s ease;
+}
+.popup-box.show, .popup-box.show .popup{
+    opacity: 1;
+    pointer-events: auto;
+}
+.popup .content{
+    width: calc(100% - 15px);
+    background: #fff;
+    border-radius: 5px;
+}
+.popup .content header{
+    padding: 15px 25px;
+    border-bottom: 1px solid #ccc;
+}
+.content header p{
+    font-size: 20px;
+    font-weight: 500;
+}
+.content header i{
+    color: #8b8989;
+    cursor: pointer;
+    font-size: 23px;
+}
+.content form{
+    margin: 15px 25px 35px
+}
+.content form .row{
+    margin-bottom: 20px;
+}
+form .row label{
+    display: block;
+    font-size: 18px;
+    margin-bottom: 6px;
+}
+.content form :where(input, textarea){
+    width: 100%;
+    height: 50px;
+    outline: none;
+    font-size: 17px;
+    padding: 0 15px;
+    border-radius: 4px;
+    border: 1px solid #999;
+}
+.content form textarea{
+    height: 150px;
+    resize: none;
+    padding: 8px 15px;
+}
+.content form button{
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 4px;
+    background: #6a93f8;
 }
