--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body, .container, .content{
 }
 body{
     min-height: 100vh;
-    background: #4a98f7;
+    background: #49D907;
 }
 .container{
     width: 440px;
@@ -50,6 +50,22 @@ body{
     height: 53px;
     width: 100%;
     font-size: 19px;
+    cursor: pointer;
+}
+.column select::-webkit-scrollbar{
+    width: 0.6rem;
+}
+.column select::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 5px #999;
+    border-radius: 0.6rem;
+}
+.column select::-webkit-scrollbar-thumb{
+    background: #49D907;
+    border-radius: 0.6rem;
+}
+.column select::-webkit-scrollbar-button{
+    display: block;
+    height: 0.6rem;
 }
 .container button{
     width: 100%;
@@ -61,5 +77,46 @@ body{
     font-size: 20px;
     padding: 17px 0;
     border-radius: 5px;
-    background: #4a98f7;
+    background: rgb(73, 217, 7);
+}
+.container button:hover{
+    background-color: rgb(73, 217, 7, 0.9);
+}
+@media only screen and (max-width: 576px){
+    .container{
+        width: 80%;
+        border-radius: 8px;
+        padding: 25px 25px 33px;
+    }
+    .container img{
+        max-width: 83px;
+    }
+    .container h1{
+        font-size: 32px;
+        margin: 25px 0;
+    }
+    .content .column{
+        padding: 0 8px;
+    }
+    .column select{
+        height: 48px;
+        font-size: 17px;
+    }
+    .column select::-webkit-scrollbar{
+        width: 0.3rem;
+    }
+    .column select::-webkit-scrollbar-track{
+        box-shadow: inset 0 0 3px #999;
+        border-radius: 0.3rem;
+    }
+    .column select::-webkit-scrollbar-thumb{
+        border-radius: 0.3rem;
+    }
+    .column select::-webkit-scrollbar-button{
+        height: 0.3rem;
+    }
+    .container button{
+        font-size: 18px;
+        padding: 13px 0;
+    }
 }
