--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body{
     margin-top: 2rem;
     font-size: 2rem;
     padding: 1.7rem 0;
-    border-radius: 0.5rwm;
+    border-radius: 0.5rem;
     background: rgb(73, 217, 7);
 }
 .container button:hover{
