--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Import Google font - Poppins */
+/* Import Google Font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 *{
     margin: 0;
@@ -6,121 +6,152 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-html{
-    font-size: 10px;
-}
-body, .container, .content{
+body{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-body{
     min-height: 100vh;
-    background: #49D907;
+    background: #2F4073;
 }
 .container{
-    width: 44rem;
+    width: 850px;
     background: #fff;
-    border-radius: 1rem;
-    flex-direction: column;
-    padding: 3rem 3rem 3.8rem;
+    border-radius: 10px;
+    padding: 30px 35px 35px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
-.container img{
-    max-width: 10.3rem;
-}
-.container h1{
-    font-size: 3.8rem;
-    font-weight: 500;
-    margin: 3rem 0;
-}
-.container .content{
-    width: 100%;
-    justify-content: space-between;
-}
-.container .content.disable{
+.container.disable :where(.editor-panel, .reset-filter, .save-img){
     opacity: 0.6;
     pointer-events: none;
 }
-.content .column{
-    border-radius: 0.5rem;
-    padding: 0 1rem;
-    border: 0.1rem solid #999;
-    width: calc(100% / 3 - 0.5rem);
+.container h2{
+    font-size: 22px;
 }
-.column select{
-    outline: none;
-    border: none;
-    height: 5.3rem;
-    width: 100%;
-    font-size: 1.9rem;
-    cursor: pointer;
+.container .wrapper{
+    display: flex;
+    margin: 20px 0;
+    min-height: 335px;
 }
-.column select::-webkit-scrollbar{
-    width: 0.6rem;
+.wrapper .editor-panel{
+    width: 280px;
+    padding: 15px 20px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
-.column select::-webkit-scrollbar-track{
-    box-shadow: inset 0 0 0.5rem #999;
-    border-radius: 0.6rem;
-}
-.column select::-webkit-scrollbar-thumb{
-    background: #49D907;
-    border-radius: 0.6rem;
-}
-.column select::-webkit-scrollbar-button{
+.editor-panel .title{
     display: block;
-    height: 0.6rem;
+    font-size: 16px;
+    margin-bottom: 12px;
 }
-.container button{
+.editor-panel .options, .controls{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.editor-panel button{
+    height: 40px;
+    font-size: 14px;
+    color: #6C757D;
+    margin-bottom: 8px;
+    border: 1px solid #aaa;
+    border-radius: 3px;
+    background: #fff;
+}
+.editor-panel button:hover{
+    background: #f5f5f5;
+}
+.editor-panel .filter button{
+    width: calc(100% / 2 - 4px);
+}
+.filter button.active{
+    color: #fff;
+    background: #5372F0;
+    border-color: #5372F0;
+}
+.filter .slider{
+    margin-top: 12px;
+}
+.filter .slider .filter-info{
+    display: flex;
+    color: #464646;
+    justify-content: space-between;
+}
+.filter .slider input{
     width: 100%;
-    outline: none;
-    border: none;
+    height: 5px;
+    accent-color: #5372f0;
+}
+.editor-panel .rotate{
+    margin-top: 17px;
+}
+.editor-panel .rotate button{
+    width: calc(100% / 4 - 3px);
+}
+.rotate button:nth-child(3), .rotate button:nth-child(4){
+    font-size: 18px;
+}
+.wrapper .preview-img{
+    flex-grow: 1;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+}
+.preview-img img{
+    max-width: 490px;
+    max-height: 335px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.controls button{
+    font-size: 14px;
     cursor: pointer;
     color: #fff;
-    margin-top: 2rem;
-    font-size: 2rem;
-    padding: 1.7rem 0;
-    border-radius: 0.5rem;
-    background: rgb(73, 217, 7);
+    background: #fff;
+    padding: 11px 20px;
+    border-radius: 3px;
+    text-transform: uppercase;
 }
-.container button:hover{
-    background-color: rgb(73, 217, 7, 0.9);
+.controls .reset-filter{
+    color: #6C757D;
+    border: 1px solid #6C757D;
 }
-@media only screen and (max-width: 576px){
+.controls .choose-img{
+    background: #6C757D;
+    border: 1px solid #6C757D;
+}
+.controls .save-img{
+    margin-left: 5px;
+    background: #5372F0;
+    border: 1px solid #5372F0;
+}
+
+@media screen and (max-width: 760px){
     .container{
-        width: 90%;
-        border-radius: 0.8rem;
-        padding: 2rem 2rem 2.8rem;
+        padding: 25px;
     }
-    .container img{
-        max-width: 8.3rem;
+    .container .wrapper{
+        flex-wrap: wrap-reverse;
     }
-    .container h1{
-        font-size: 3.2rem;
-        margin: 2.5rem 0;
+    .wrapper .editor-panel{
+        width: 100%;
     }
-    .content .column{
-        padding: 0 0.6rem;
+    .wrapper .preview-img{
+        width: 100%;
+        margin: 0 0 15px;
     }
-    .column select{
-        height: 4.8rem;
-        font-size: 1.6rem;
-        background-color: #fff;
+}
+@media screen and (max-width: 500px){
+    .controls button{
+        width: 100%;
+        margin-bottom: 10px;
     }
-    .column select::-webkit-scrollbar{
-        width: 0.3rem;
+    .controls .row{
+        width: 100%;
     }
-    .column select::-webkit-scrollbar-track{
-        box-shadow: inset 0 0 0.3rem #999;
-        border-radius: 0.3rem;
-    }
-    .column select::-webkit-scrollbar-thumb{
-        border-radius: 0.3rem;
-    }
-    .column select::-webkit-scrollbar-button{
-        height: 0.3rem;
-    }
-    .container button{
-        font-size: 1.7rem;
-        padding: 1.3rem 0;
+    .controls .row .save-img{
+        margin-left: 0px;
     }
 }
