--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Import Google Font - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -10,148 +10,146 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 10px;
     min-height: 100vh;
-    background: #2F4073;
+    background: #5372F0;
 }
 .container{
-    width: 850px;
+    width: 690px;
     background: #fff;
-    border-radius: 10px;
-    padding: 30px 35px 35px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    padding: 30px;
 }
-.container.disable :where(.editor-panel, .reset-filter, .save-img){
-    opacity: 0.6;
-    pointer-events: none;
-}
-.container h2{
-    font-size: 22px;
-}
-.container .wrapper{
-    display: flex;
-    margin: 20px 0;
-    min-height: 335px;
-}
-.wrapper .editor-panel{
-    width: 280px;
-    padding: 15px 20px;
+.wrapper{
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #bbb;
 }
-.editor-panel .title{
-    display: block;
-    font-size: 16px;
-    margin-bottom: 12px;
-}
-.editor-panel .options, .controls{
+.wrapper .text-input{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    border-bottom: 1px solid #bbb;
 }
-.editor-panel button{
-    height: 40px;
-    font-size: 14px;
-    color: #6C757D;
-    margin-bottom: 8px;
-    border: 1px solid #aaa;
-    border-radius: 3px;
-    background: #fff;
+.text-input .to-text{
+    border-radius: 0px;
+    border-left: 1px solid #bbb;
 }
-.editor-panel button:hover{
-    background: #f5f5f5;
-}
-.editor-panel .filter button{
-    width: calc(100% / 2 - 4px);
-}
-.filter button.active{
-    color: #fff;
-    background: #5372F0;
-    border-color: #5372F0;
-}
-.filter .slider{
-    margin-top: 12px;
-}
-.filter .slider .filter-info{
-    display: flex;
-    color: #464646;
-    justify-content: space-between;
-}
-.filter .slider input{
+.text-input textarea{
+    height: 250px;
     width: 100%;
-    height: 5px;
-    accent-color: #5372f0;
-}
-.editor-panel .rotate{
-    margin-top: 17px;
-}
-.editor-panel .rotate button{
-    width: calc(100% / 4 - 3px);
-}
-.rotate button:nth-child(3), .rotate button:nth-child(4){
+    border: none;
+    outline: none;
+    resize: none;
     font-size: 18px;
+    border-radius: 5px;;
+    background: none;
+    padding: 10px 15px;
 }
-.wrapper .preview-img{
-    flex-grow: 1;
+.text-input textarea::-webkit-scrollbar{
+    width: 0.3rem;
+}
+.text-input textarea::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 0.5rem #999;
+    border-radius: 0.3rem;
+}
+.text-input textarea::-webkit-scrollbar-thumb{
+    background: #5372F0;
+    border-radius: 0.3rem;
+}
+.text-input textarea::-webkit-scrollbar-button{
+    display: block;
+    height: 0.3rem;
+}
+.controls, li, .icons, .icons i{
     display: flex;
-    overflow: hidden;
     align-items: center;
-    justify-content: center;
-    margin-left: 20px;
+    justify-content: space-between;
 }
-.preview-img img{
-    max-width: 490px;
-    max-height: 335px;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+.controls .row.from .icons{
+    padding-right: 15px;
+    border-right: 1px solid #bbb;
 }
-.controls button{
+.controls .row.to .icons{
+    padding-left: 15px;
+    border-left: 1px solid #bbb;
+}
+.controls{
+    list-style: none;
+    padding: 12px 15px;
+}
+.controls .icons{
+    width: 38%;
+}
+.controls .icons i{
+    width: 50px;
+    color: #9f9f9f;
     font-size: 14px;
     cursor: pointer;
+    justify-content: center;
+}
+.controls .row select{
+    border: none;
+    outline: none;
+    font-size: 18px;
+    background: none;
+}
+.controls .exchange{
+    color: #9f9f9f;
+    font-size: 16px;
+    cursor: pointer;
+}
+.container button{
+    width: 100%;
+    padding: 14px;
+    margin-top: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
     color: #fff;
-    background: #fff;
-    padding: 11px 20px;
-    border-radius: 3px;
-    text-transform: uppercase;
-}
-.controls .reset-filter{
-    color: #6C757D;
-    border: 1px solid #6C757D;
-}
-.controls .choose-img{
-    background: #6C757D;
-    border: 1px solid #6C757D;
-}
-.controls .save-img{
-    margin-left: 5px;
+    font-size: 17px;
+    border-radius: 5px;
     background: #5372F0;
-    border: 1px solid #5372F0;
 }
-
-@media screen and (max-width: 760px){
+@media screen and (max-width: 660px){
     .container{
-        padding: 25px;
+        padding: 20px;
     }
-    .container .wrapper{
-        flex-wrap: wrap-reverse;
+    .wrapper .text-input{
+        flex-direction: column;
     }
-    .wrapper .editor-panel{
-        width: 100%;
+    .text-input .to-text{
+        border-left: 0px;
+        border-top: 1px solid #bbb;
     }
-    .wrapper .preview-img{
-        width: 100%;
-        margin: 0 0 15px;
-    }
-}
-@media screen and (max-width: 500px){
-    .controls button{
-        width: 100%;
-        margin-bottom: 10px;
+    .text-input textarea{
+        height: 200px;
     }
     .controls .row{
-        width: 100%;
+        padding-bottom: 30px;
+        position: relative;
     }
-    .controls .row .save-img{
-        margin-left: 0px;
+    .controls .row .icons{
+        position: absolute;
+        width: 100%;
+        bottom: 0px;
+        padding-top: 10px;
+    }
+    .controls .row.from .icons{
+        padding-right: 0px;
+        border: none;
+        border-top: 1px solid #bbb;
+    }
+    .controls .row.to .icons{
+        padding-left: 0px;
+        border: none;
+        border-top: 1px solid #bbb;
+    }
+    .container button{
+        padding: 13px;
+        font-size: 16px;
+    }
+    .controls .row select{
+        font-size: 16px;
+    }
+    .controls .exchange{
+        font-size: 14px;
     }
 }
